# fw

./: .cproject  CMakeLists.txt  LICENSE  README.md  libfcgi.cmake  libzks.cmake
simfcgi/: CMakeLists.txt  simfcgi++.cpp  simfcgi-mt.cpp  simfcgi.ini
simproto/: CMakeLists.txt  proto_test.cpp  proto_test.ini  simproto.cpp  simproto.ini  test.pb.cc  test.pb.h  test.proto
vs2013/fw/: fw.props  fw.sln
vs2013/fw/simfcgi/: simfcgi.vcxproj  simfcgi.vcxproj.filters
vs2013/fw/simproto/: simproto.vcxproj  simproto.vcxproj.filters
vs2013/fw/simproto_clnt/: simproto_clnt.vcxproj  simproto_clnt.vcxproj.filters
